changed packer file path

--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -17,13 +17,13 @@ jobs:
           version: "latest"
       - name: Run `packer init`
         id: init
-        run: "packer init ../packer/packer-test.pkr.hcl"
+        run: "packer init ../packer-test.pkr.hcl"
       - name: Run `packer validate`
         id: validate
-        run: "packer validate ../packer/packer-test.pkr.hcl"
+        run: "packer validate ../packer-test.pkr.hcl"
 
       - name: Build Artifact
-        run: packer build -color=false -on-error=abort ../packer/packer-test.pkr.hcl
+        run: packer build -color=false -on-error=abort ../packer-test.pkr.hcl
         env:
           # HCP_CLIENT_ID: ${{ secrets.HCP_CLIENT_ID }}
           # HCP_CLIENT_SECRET: ${{ secrets.HCP_CLIENT_SECRET }}
